# parser-test

./: README.md  dune-project  parser_test.opam
lib/: dune  int.ml  lexer.mll
lib/data/: data_lexer.mll  data_parser.mly  data_reader.ml  data_reader.mli  dune
lib/data_seq/: data_seq_lexer.mll  data_seq_parser.mly  data_seq_reader.ml  data_seq_reader.mli  dune
lib/int/: dune  int_lexer.mll  int_parser.mly  int_reader.ml  int_reader.mli
test/: dune
test/data/: data.txt  data_seq.txt  int_seq.txt
